--- a/aboutus.html
+++ b/aboutus.html
@@ -142,77 +142,19 @@
         footer a:hover {
             text-decoration: underline;
         }
-
-        /* Navigation styles */
-        nav {
-            position: relative;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .nav-toggle {
-            display: none; /* Hide the toggle button on larger screens */
-            flex-direction: column;
-            cursor: pointer;
-        }
-
-        .nav-toggle span {
-            height: 3px;
-            width: 25px;
-            background: #d9534f;
-            margin: 3px 0;
-            transition: all 0.3s ease;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            gap: 20px;
-            margin: 0;
-        }
-
-        nav ul.active {
-            display: block;
-        }
-
-        @media (max-width: 768px) {
-            .nav-toggle {
-                display: flex; /* Show the toggle button on smaller screens */
-            }
-
-            nav ul {
-                display: none; /* Hide the navigation links by default */
-                flex-direction: column;
-                position: absolute;
-                background: #fff;
-                top: 60px; /* Adjust as needed */
-                left: 0;
-                right: 0;
-                padding: 10px 0;
-            }
-        }
     </style>
 </head>
 <body>
     <header>
         <img src="images/logov2 (2).jpg" alt="MrDryCleaners Logo" class="logo">
         <nav>
-            <div class="nav-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="specials.html">Specials</a></li>
-                <li><a href="locations.html">Locations</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+            <a href="index.html">Home</a>
+            <a href="aboutus.html">About Us</a>
+            <a href="services.html">Services</a>
+            <a href="pricing.html">Pricing</a>
+            <a href="specials.html">Specials</a>
+            <a href="locations.html">Locations</a>
+            <a href="contact.html">Contact</a>
         </nav>
         <!-- Bubble container -->
         <div class="bubbles">
@@ -260,16 +202,5 @@
             <a href="https://www.youtube.com/@MrDryCleanersUT" target="_blank" rel="noopener noreferrer">YouTube</a>
         </div>
     </footer>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const navToggle = document.querySelector('.nav-toggle');
-            const navUl = document.querySelector('nav ul');
-
-            navToggle.addEventListener('click', () => {
-                navUl.classList.toggle('active');
-            });
-        });
-    </script>
 </body>
 </html>
