--- a/aboutus.html
+++ b/aboutus.html
@@ -165,7 +165,7 @@
                 display: none; /* Hide navigation by default */
                 flex-direction: column;
                 position: absolute;
-                background-color: #e0f7fa;
+                background-color: #ffffff;
                 width: 100%;
                 top: 60px; /* Adjust position to below header */
                 left: 0;
