--- a/blog.html
+++ b/blog.html
@@ -109,7 +109,7 @@
             <a href="blog.html">Blog</a>
             <a href="contact.html">Contact</a>
         </nav>
-        <div class="hamburger" onclick="toggleMenu()"></div>
+        <div class="hamburger" onclick="toggleMenu()">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
