--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
             <a href="locations.html" style="font-family: 'Oswald', sans-serif; font-weight: bold;">Locations</a>
             <a href="contact.html" style="font-family: 'Oswald', sans-serif; font-weight: bold;">Contact</a>
         </nav>
-        <div class="hamburger" onclick="toggleMenu()"></div>
+        <div class="hamburger" onclick="toggleMenu()">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
