--- a/household.html
+++ b/household.html
@@ -116,7 +116,7 @@
             <a href="locations.html">Locations</a>
             <a href="contact.html">Contact</a>
         </nav>
-        <div class="hamburger" onclick="toggleMenu()"></div>
+        <div class="hamburger" onclick="toggleMenu()">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
