--- a/drycleaning.html
+++ b/drycleaning.html
@@ -139,13 +139,11 @@
                 </div>
                 <div class="service-item">
                     <h3>Jackets/Sport Coats</h3>
-                    <p>Regular: $7.35</p>
-                    <p>Down: $11.00</p>
+                    <p>Regular: $11.55</p>
                 </div>
                 <div class="service-item">
-                    <h3>Suits</h3>
-                    <p>Regular 2 pc: $14.75</p>
-                    <p>Regular 3 pc: $21.00</p>
+                    <h3>Suit Jacket</h3>
+                    <p>Regular Jacket: $10.50</p>
                 </div>
                 <div class="service-item">
                     <h3>Shirts</h3>
@@ -155,44 +153,38 @@
                 </div>
                 <div class="service-item">
                     <h3>Pants</h3>
-                    <p>Regular: $7.35</p>
-                    <p>Jeans: $6.60</p>
+                    <p>Regular: $5.80</p>
+                    <p>Jeans: $5.80</p>
                 </div>
                 <div class="service-item">
                     <h3>Skirts</h3>
-                    <p>Regular: $7.35</p>
-                    <p>Fancy: $10.50</p>
-                    <p>Long: $10.50</p>
+                    <p>Regular: $6.30</p>
+                    <p>Below Knee: $11.30</p>
                 </div>
                 <div class="service-item">
                     <h3>Sweaters</h3>
-                    <p>Regular: $7.35</p>
-                    <p>Down: $11.00</p>
+                    <p>Regular: $6.60</p>
+                    <p>Bulky: $8.70</p>
                 </div>
                 <div class="service-item">
                     <h3>Coats/Jackets</h3>
-                    <p>Regular: $11.00</p>
-                    <p>Long: $14.25</p>
-                    <p>Down: $18.00</p>
+                    <p>Depends On Coat: $11.00-$53.05</p>
                 </div>
                 <div class="service-item">
                     <h3>Ties</h3>
-                    <p>Regular: $3.60</p>
-                    <p>Fancy: $4.35</p>
+                    <p>Regular: $6.05</p>
                 </div>
                 <div class="service-item">
                     <h3>Scarfs</h3>
-                    <p>Regular: $3.60</p>
-                    <p>Fancy: $4.35</p>
+                    <p>Regular: $7.35</p>
                 </div>
                 <div class="service-item">
                     <h3>Vests</h3>
-                    <p>Regular: $5.10</p>
-                    <p>Fancy: $6.60</p>
+                    <p>Regular: $6.60</p>
                 </div>
                 <div class="service-item">
                     <h3>Jump Suits</h3>
-                    <p>Regular: $11.55</p>
+                    <p>Regular: $12.00</p>
                 </div>
                 <div class="service-item">
                     <h3>Misc Cleaning</h3>
