--- a/drycleaning.html
+++ b/drycleaning.html
@@ -147,9 +147,9 @@
                 </div>
                 <div class="service-item">
                     <h3>Shirts</h3>
-                    <p>Dry Clean: $5.10</p>
-                    <p>Laundered: $2.85</p>
-                    <p>Folded: $3.25</p>
+                    <p>Regular: $6.60</p>
+                    <p>Laundered: $3.15</p>
+                    <p>Silk: $7.35</p>
                 </div>
                 <div class="service-item">
                     <h3>Pants</h3>
