--- a/alterations.html
+++ b/alterations.html
@@ -108,6 +108,8 @@
                     <p>Hem With Line Inside $23.65</p>
                     <p>Hem Denim $23.65</p>
                     <p>Hem Denim original $29.95</p>
+                    <p>Hem Wide Pants $29.95<p>
+                    <p>Lenghthen Pants $21.55<p>
                     <p>Re-Hem one leg</p>
                     <p>Re-Hem Both Legs $15.75</p>
                     <p>Hem With Frayed Cuff</p>
