--- a/locations.html
+++ b/locations.html
@@ -190,6 +190,14 @@
                     <p>Hours: Mon-Fri 8:00 am - 6:00 pm, Sat 9:00 am - 4:00 pm</p>
                     <p><a href="https://maps.app.goo.gl/PNX2syAs3pG5Wduy8" target="_blank" rel="noopener noreferrer">View on Google Maps</a></p>
                 </div>
+                <div class="location-item">
+                    <img src="images/midvale.jpg" alt="Location 5">
+                    <h3>Midvale</h3>
+                    <p>7235 S 900 E Midvale, UT 84047</p>
+                    <p>Phone: (801) 994-6501</p>
+                    <p>Hours: Mon-Fri 8:00 am - 6:00 pm, Sat 9:00 am - 4:00 pm</p>
+                    <p><a href="https://maps.app.goo.gl/FQ6BpoQu9pRZ3kg77" target="_blank" rel="noopener noreferrer">View on Google Maps</a></p>
+                </div>
             </div>
         </section>
     </div>
@@ -212,6 +220,6 @@
             const nav = document.querySelector('nav');
             nav.classList.toggle('active');
         }
-        </script>
+    </script>
 </body>
 </html>
