--- a/locations.html
+++ b/locations.html
@@ -191,7 +191,7 @@
                     <p><a href="https://maps.app.goo.gl/PNX2syAs3pG5Wduy8" target="_blank" rel="noopener noreferrer">View on Google Maps</a></p>
                 </div>
                 <div class="location-item">
-                    <img src="images/midvale.jpg.jpg" alt="Location 5">
+                    <img src="images/midvale.jpeg" alt="Location 5">
                     <h3>Midvale</h3>
                     <p>7235 S 900 E Midvale, UT 84047</p>
                     <p>Phone: (801) 994-6501</p>
