--- a/alterations.html
+++ b/alterations.html
@@ -102,63 +102,63 @@
             <div class="services-grid">
                 <div class="service-item">
                     <h3>Pants</h3>
-                    <p>Hem $21.55</p>
-                    <p>Hem Cuff $23.65</p>
-                    <p>Hem Stretch Pants $23.65</p>
-                    <p>Hem With Line Inside $23.65</p>
-                    <p>Hem Denim $23.65</p>
-                    <p>Hem Denim original $29.95</p>
+                    <p>Hem $22.65</p>
+                    <p>Hem Cuff $24.85</p>
+                    <p>Hem Stretch Pants $24.85</p>
+                    <p>Hem With Line Inside $24.85</p>
+                    <p>Hem Denim $24.85</p>
+                    <p>Hem Denim original $31.45</p>
                     <p>Hem Wide Pants $29.95<p>
                     <p>Lenghthen Pants $21.55<p>
-                    <p>Re-Hem one leg</p>
-                    <p>Re-Hem Both Legs $15.75</p>
-                    <p>Hem With Frayed Cuff</p>
-                    <p>Take In Waist $23.65</p>
-                    <p>Take In Waist Denim $29.95</p>
-                    <p>Let Out Waist $23.65</p>
-                    <p>Let Out Waist Add Material $29.95</p>
-                    <p>Taper Pants $26.80</p>
-                    <p>Taper Denim</p>
-                    <p>Repair Belt Loop $5.80</p>
-                    <p>Repair And Patch Belt Loop With Tear</p>
-                    <p>Replace Zipper $26.80</p>
+                    <p>Re-Hem one leg $9.40</p>
+                    <p>Re-Hem Both Legs $16.55</p>
+                    <p>Hem With Frayed Cuff $38.60</p>
+                    <p>Take In Waist $24.85</p>
+                    <p>Take In Waist Denim $31.45</p>
+                    <p>Let Out Waist $24.85</p>
+                    <p>Let Out Waist Add Material $31.45</p>
+                    <p>Taper Pants $28.15</p>
+                    <p>Taper Denim $31.45</p>
+                    <p>Repair Belt Loop $6.10</p>
+                    <p>Repair And Patch Belt Loop With Tear $9.40</p>
+                    <p>Replace Zipper $28.15</p>
                 </div>
                 <div class="service-item">
                     <h3>Shirts</h3>
-                    <p>Repair Pocket $6.85</p>
-                    <p>Shorten Sleeves $20.50</p>
-                    <p>Shorten Sleeve With Cuff $26.80</p>
-                    <p>Take In $23.65</p>
-                    <p>Hem $23.65</p>
-                    <p>Hem T-Shirts $23.65</p>
-                    <p>Hem T-Shirt With Split $26.80</p>
-                    <p>Military Patch $11.05</p>
+                    <p>Repair Pocket $7.20</p>
+                    <p>Shorten Sleeves $21.55</p>
+                    <p>Shorten Sleeve With Cuff $28.15</p>
+                    <p>Take In $24.85</p>
+                    <p>Hem $24.85</p>
+                    <p>Hem T-Shirts $24.85</p>
+                    <p>Hem T-Shirt With Split $28.15</p>
+                    <p>Military Patch $11.60</p>
                 </div>
                 <div class="service-item">
                     <h3>Jackets</h3>
-                    <p>Take In $42.00</p>
-                    <p>Let Out $42.00</p>
-                    <p>Hem $63.00</p>
-                    <p>Shorten Sleeves $50.00</p>
-                    <p>Lengthen Sleeves $50.00</p>
-                    <p>Replace Zipper $36.75</p>
-                    <p>Replace Zipper Ski/Down $63.00</p>
-                    <p>Military Patch $11.05</p>
+                    <p>Take In $44.10</p>
+                    <p>Let Out $44.10</p>
+                    <p>Hem $66.15</p>
+                    <p>Shorten Sleeves $44.10</p>
+                    <p>Lengthen Sleeves $44.10</p>
+                    <p>Replace Zipper $38.60</p>
+                    <p>Replace Zipper Ski/Down $66.15</p>
+                    <p>Military Patch $11.60</p>
                 </div>
                 <div class="service-item">
                     <h3>Dresses</h3>
-                    <p>Take In Waist $26.25</p>
-                    <p>Take In Waist With Lining $31.50</p>
-                    <p>Hem $26.25</p>
-                    <p>Hem With Line $37.80</p>
-                    <p>Hem With 2 Layers $52.50</p>
-                    <p>Replace Zipper (short) $26.25</p>
-                    <p>Replace Zipper (long) $32.05</p>
+                    <p>Take In Waist $27.60</p>
+                    <p>Take In Waist With Lining $33.10</p>
+                    <p>Hem $27.60</p>
+                    <p>Hem With Line $39.70</p>
+                    <p>Hem With 2 Layers $55.15</p>
+                    <p>Replace Zipper (short) $28.15</p>
+                    <p>Replace Zipper (long) $33.65</p>
                 </div>
                 <div class="service-item">
                     <h3>Coats</h3>
-                    <p>Replace Coat Zipper (short) $42.00</p>
-                    <p>Medium Coat Zipper (ski) $63.00</p>
+                    <p>Replace Coat Zipper (short) $44.10</p>
+                    <p>Medium Coat Zipper (ski) $66.15</p>
                 </div>
                 <div class="service-item">
                     <h3>Shorts</h3>
@@ -174,8 +174,8 @@
                 </div>
                 <div class="service-item">
                     <h3>Miscellaneous</h3>
-                    <p>Zipper Glider $15.75</p>
-                    <p>Military Patch $11.05</p>
+                    <p>Zipper Glider $16.55</p>
+                    <p>Military Patch $11.60</p>
                 </div>
             </div>
         </section>
