--- a/drycleaning.html
+++ b/drycleaning.html
@@ -128,63 +128,63 @@
             <div class="services-grid">
                 <div class="service-item">
                     <h3>Blouses</h3>
-                    <p>Regular: $6.60</p>
-                    <p>100% Silk: $7.35</p>
+                    <p>Regular: $6.95</p>
+                    <p>100% Silk: $7.75</p>
                 </div>
                 <div class="service-item">
                     <h3>Dresses</h3>
-                    <p>Regular: $10.80</p>
-                    <p>Long: $11.55</p>
-                    <p>Fancy: $18.90</p>
+                    <p>Regular: $11.35</p>
+                    <p>Long: $12.15.</p>
+                    <p>Fancy: $19.85</p>
                 </div>
                 <div class="service-item">
                     <h3>Jackets/Sport Coats</h3>
-                    <p>Regular: $11.55</p>
+                    <p>Regular: $12.15</p>
                 </div>
                 <div class="service-item">
                     <h3>Suit Jacket</h3>
-                    <p>Regular Jacket: $10.50</p>
+                    <p>Regular Jacket: $11.05</p>
                 </div>
                 <div class="service-item">
                     <h3>Shirts</h3>
-                    <p>Regular: $6.60</p>
+                    <p>Regular: $6.95</p>
                     <p>Laundered: $3.15</p>
-                    <p>Silk: $7.35</p>
+                    <p>Silk: $7.75</p>
                 </div>
                 <div class="service-item">
                     <h3>Pants</h3>
-                    <p>Regular: $5.80</p>
-                    <p>Jeans: $5.80</p>
+                    <p>Regular: $6.10</p>
+                    <p>Jeans: $6.10</p>
                 </div>
                 <div class="service-item">
                     <h3>Skirts</h3>
-                    <p>Regular: $6.30</p>
-                    <p>Below Knee: $11.30</p>
+                    <p>Regular: $6.65</p>
+                    <p>Below Knee: $11.90</p>
                 </div>
                 <div class="service-item">
                     <h3>Sweaters</h3>
-                    <p>Regular: $6.60</p>
-                    <p>Bulky: $8.70</p>
+                    <p>Regular: $6.95</p>
+                    <p>Bulky: $9.15</p>
                 </div>
                 <div class="service-item">
                     <h3>Coats/Jackets</h3>
-                    <p>Depends On Coat: $11.00-$53.05</p>
+                    <p>Depends On Coat: $11.35-$55.70</p>
                 </div>
                 <div class="service-item">
                     <h3>Ties</h3>
-                    <p>Regular: $6.05</p>
+                    <p>Regular: $6.35</p>
                 </div>
                 <div class="service-item">
                     <h3>Scarfs</h3>
-                    <p>Regular: $7.35</p>
+                    <p>Regular: $7.75</p>
                 </div>
                 <div class="service-item">
                     <h3>Vests</h3>
-                    <p>Regular: $6.60</p>
+                    <p>Regular: $6.95</p>
                 </div>
                 <div class="service-item">
                     <h3>Jump Suits</h3>
-                    <p>Regular: $12.00</p>
+                    <p>Regular: $12.60</p>
                 </div>
                 <div class="service-item">
                     <h3>Misc Cleaning</h3>
