--- a/household.html
+++ b/household.html
@@ -132,68 +132,68 @@
             <div class="services-grid">
                 <div class="service-item">
                     <h3>Comforters</h3>
-                    <p>All Size Comforters: $30.00</p>
+                    <p>All Size Comforters: $31.50</p>
                 </div>
                 <div class="service-item">
                     <h3>Blanket/Afghan</h3>
-                    <p>Small: $15.25</p>
-                    <p>Medium: $21.00</p>
-                    <p>Large: $26.80</p>
+                    <p>Small: $16.05</p>
+                    <p>Medium: $22.05</p>
+                    <p>Large: $28.15</p>
                 </div>
                 <div class="service-item">
                     <h3>Sheets/Pillowcases/Duvet</h3>
-                    <p>Sheet Any Size Fitted Or Flat: $7.10</p>
-                    <p>Pillow Case/Sham: $4.75</p>
-                    <p>Duvet Any Size: $18.65</p>
-                    <p>Bed Skirts: $8.80</p>
+                    <p>Sheet Any Size Fitted Or Flat: $7.50</p>
+                    <p>Pillow Case/Sham: $5.00</p>
+                    <p>Duvet Any Size: $19.60</p>
+                    <p>Bed Skirts: $6.10</p>
                 </div>
                 <div class="service-item">
                     <h3>Sleeping Bags</h3>
-                    <p>Regular: $21.00</p>
-                    <p>Down Filled: $26.80</p>
-                    <p>Double: $36.75</p>
+                    <p>Regular: $22.05</p>
+                    <p>Down Filled: $28.15</p>
+                    <p>Double: $38.60</p>
                 </div>
                 <div class="service-item">
                     <h3>Cushions/Pillows</h3>
-                    <p>Small: $3.70</p>
-                    <p>Medium: $4.75</p>
-                    <p>Large: $7.10</p>
-                    <p>Extra Large: $10.50</p>
+                    <p>Small: $3.90</p>
+                    <p>Medium: $5.00</p>
+                    <p>Large: $7.50</p>
+                    <p>Extra Large: $11.05</p>
                 </div>
                 <div class="service-item">
                     <h3>Tablecloths</h3>
-                    <p>Small: $9.45</p>
-                    <p>Medium: $11.55</p>
-                    <p>Large: $15.25</p>
-                    <p>Extra Large: $18.65</p>
+                    <p>Small: $9.95</p>
+                    <p>Medium: $12.15</p>
+                    <p>Large: $16.05</p>
+                    <p>Extra Large: $19.60</p>
                 </div>
                 <div class="service-item">
                     <h3>Table Runner</h3>
-                    <p>Small: $5.80</p>
-                    <p>Medium: $8.15</p>
-                    <p>Large: $10.50</p>
+                    <p>Small: $6.10</p>
+                    <p>Medium: $8.60</p>
+                    <p>Large: $11.05</p>
                 </div>
                 <div class="service-item">
                     <h3>Napkins</h3>
-                    <p>$2.40</p>
+                    <p>$2.55</p>
                 </div>
                 <div class="service-item">
                     <h3>Mattress Toppers</h3>
-                    <p>Mattress Topper Twin: $34.65</p>
-                    <p>Mattress Topper Queen: $40.45</p>
-                    <p>Mattress Topper King: $46.20</p>
+                    <p>Mattress Topper Twin: $36.40</p>
+                    <p>Mattress Topper Queen: $42.50</p>
+                    <p>Mattress Topper King: $48.55</p>
                 </div>
                 <div class="service-item">
                     <h3>Drapery</h3>
-                    <p>Small Panel: $7.10</p>
-                    <p>Medium Panel: $11.55</p>
-                    <p>Large Panel: $15.25</p>
+                    <p>Small Panel: $7.50</p>
+                    <p>Medium Panel: $12.15</p>
+                    <p>Large Panel: $16.05</p>
                 </div>
                 <div class="service-item">
                     <h3>Rugs</h3>
-                    <p>Small Rug: $25.00</p>
-                    <p>Medium Rug: $35.00</p>
-                    <p>Large Rug: $45.00</p>
+                    <p>Small Rug: $25.00+</p>
+                    <p>Medium Rug: $35.00+</p>
+                    <p>Large Rug: $45.00+</p>
                 </div>
             </div>
         </section>
