--- a/drycleaning.html
+++ b/drycleaning.html
@@ -128,63 +128,65 @@
             <div class="services-grid">
                 <div class="service-item">
                     <h3>Blouses</h3>
-                    <p>Regular: $6.95</p>
-                    <p>100% Silk: $7.75</p>
+                    <p>Regular: $7.30</p>
+                    <p>100% Silk: $8.15</p>
                 </div>
                 <div class="service-item">
                     <h3>Dresses</h3>
-                    <p>Regular: $11.35</p>
-                    <p>Long: $12.15.</p>
-                    <p>Fancy: $19.85</p>
+                    <p>Regular: $11.95</p>
+                    <p>Long: $12.80.</p>
+                    <p>Semi Fancy: 13.95<p>
+                    <p>Fancy: $20.85</p>
                 </div>
                 <div class="service-item">
                     <h3>Jackets/Sport Coats</h3>
-                    <p>Regular: $12.15</p>
+                    <p>Regular: $12.80</p>
                 </div>
                 <div class="service-item">
                     <h3>Suit Jacket</h3>
-                    <p>Regular Jacket: $11.05</p>
+                    <p>Regular Jacket: $12.00</p>
+                    <p>Suit Jacket Pants:$7.00</p>
                 </div>
                 <div class="service-item">
                     <h3>Shirts</h3>
-                    <p>Regular: $6.95</p>
-                    <p>Laundered: $3.15</p>
-                    <p>Silk: $7.75</p>
+                    <p>Regular: $7.30</p>
+                    <p>Laundered: $3.55</p>
+                    <p>Silk: $8.15</p>
                 </div>
                 <div class="service-item">
                     <h3>Pants</h3>
-                    <p>Regular: $6.10</p>
-                    <p>Jeans: $6.10</p>
+                    <p>Regular: $8.00</p>
+                    <p>Jeans: $8.00</p>
                 </div>
                 <div class="service-item">
                     <h3>Skirts</h3>
-                    <p>Regular: $6.65</p>
-                    <p>Below Knee: $11.90</p>
+                    <p>Regular: $7.00</p>
+                    <p>Below Knee: $12.50</p>
                 </div>
                 <div class="service-item">
                     <h3>Sweaters</h3>
-                    <p>Regular: $6.95</p>
-                    <p>Bulky: $9.15</p>
+                    <p>Regular: $7.50</p>
+                    <p>Bulky: $9.65</p>
                 </div>
                 <div class="service-item">
                     <h3>Coats/Jackets</h3>
-                    <p>Depends On Coat: $11.35-$55.70</p>
+                    <p>Depends On Coat: $12.00-$75.00</p>
                 </div>
                 <div class="service-item">
                     <h3>Ties</h3>
-                    <p>Regular: $6.35</p>
+                    <p>Regular: $6.70</p>
                 </div>
                 <div class="service-item">
                     <h3>Scarfs</h3>
-                    <p>Regular: $7.75</p>
+                    <p>Regular: $8.15</p>
                 </div>
                 <div class="service-item">
                     <h3>Vests</h3>
-                    <p>Regular: $6.95</p>
+                    <p>Regular: $7.50</p>
                 </div>
                 <div class="service-item">
                     <h3>Jump Suits</h3>
-                    <p>Regular: $12.60</p>
+                    <p>Regular: $13.25</p>
                 </div>
                 <div class="service-item">
                     <h3>Misc Cleaning</h3>
@@ -214,3 +216,4 @@
         </script>
 </body>
 </html>
+
