--- a/specials.html
+++ b/specials.html
@@ -125,8 +125,12 @@
             <h1>Specials</h1>
             <p>Check out our latest promotions and special offers:</p>
             <ul>
-                <li>10 Shirts For $35</li>
-                <li>All Comforters $30</li>
+                <li>Monday,Wednesday And Friday bring 10 Shirts Get ONE Free! (Launder)</li>
+                <li> Tuesday And Thursday 2 Comforters For 35$!<li>
+                <li> Saturday 20% OFF All Dry Cleaning!<li>     
+
+                    
+                <li></li>
             </ul>
         </section>
     </div>
@@ -149,3 +153,4 @@
         </script>      
 </body>
 </html>
+
